fix: Hi I'm Jude visibility

--- a/frontend/src/pages/AboutMe.css
+++ b/frontend/src/pages/AboutMe.css
@@ -1,24 +1,25 @@
 .jude-text {
   font-family: 'Dancing Script', cursive;
   font-weight: 700;
-  background: linear-gradient(to right, #3f51b5, #ff4081);
+  background: linear-gradient(to right, #080744, #ff4081);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: .8px white; /* White outline */
-  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
+  -webkit-text-stroke: .2px rgb(0, 0, 0); /* Increased stroke */
+  text-shadow: 12px 12px 24px rgba(0, 0, 0, 1); /* Increased shadow */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  font-size: 2rem;
 }
+
+
 
 .image-container {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 200px;
   overflow: hidden;
   border-radius: 5px;
 }
@@ -38,10 +39,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-@media (max-width: 600px) {
-  .jude-text {
-    font-size: 1.5rem;
-  }
 }
